# seattlehaskell-org-static

./: .gitignore  .gitmodules  LICENSE  README.md  Setup.hs  all.template  deploy.template  index.html  seattlehaskell-org-static.cabal  site.hs  templategen.hs
_site_debug/: about.html  archive.html  ctp.html  ctp2.html  first.html  index.html  pcph.html  second.html  third.html
_site_debug/other/: ctp.ics  pcph.ics
_site_debug/posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
_site_release/: archive.html  contact.html  ctp.html  ctp2.html  first.html  index.html  pcph.html  second.html  third.html
_site_release/other/: pcph.ics
_site_release/posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
_site_test/: first.html  pcph.html  second.html
_site_test/posts/: 2012-08-12-spqr.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
other/: ctp2.ics
pages/: ctp.hamlet  ctp2.hamlet  pcph.hamlet  second.hamlet  third.md
script/: all  build  build.py  deploy  init  test  update
src/TemplateGen/: Css.hs  DoIt.hs  Html.hs  PageContext.hs  Resource.hs  SiteInfo.hs  TemplateContext.hs  Templates.hs  Types.hs  Url.hs  UrlString.hs
src/lib/TemplateGen/: Css.hs  Hash.hs  Master.hs  PageContext.hs  Resource.hs  Settings.hs
src/templategen/: Main.hs  Templates.hs
templates/: post-list.html  scratch.hamlet
