name:               seattlehaskell-org-static
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
category:           Web
author:             Richard Cook
maintainer:         rcook@rcook.org
synopsis:           Static content generator for seattlehaskell.org
description:        Static content generator for seattlehaskell.org
homepage:           https://github.com/seahug/seattlehaskell-org-static
license:            MIT
license-file:       LICENSE

source-repository head
  type:             git
  location:         https://github.com/seahug/seattlehaskell-org-static.git

executable site
  default-language: Haskell2010
  ghc-options:      -threaded
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
